--- a/comme-vous-le-souhaitez/src/App.css
+++ b/comme-vous-le-souhaitez/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.App, table {
   text-align: center;
 }
 
@@ -23,7 +23,13 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+table {
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .App-link {
   color: #61dafb;
 }
